Save container type in DB explicity